[gd_scene format=3 uid="uid://c8wx4j8l5ed75"]

[ext_resource type="Script" uid="uid://dpg82gcac54ds" path="res://component/level/level_instance.gd" id="1_yqfgh"]

[node name="LevelInstance" type="Node3D" unique_id=1987439794]
script = ExtResource("1_yqfgh")
metadata/_custom_type_script = "uid://dpg82gcac54ds"

[node name="Prefabs" type="Node3D" parent="." unique_id=898872504]

[node name="GroupsNetworked" type="Node3D" parent="." unique_id=423821889]

[node name="GroupsLocal" type="Node3D" parent="." unique_id=1297242959]
